# Raspi_TempLogger

./: .gitignore  README.md  __main__.py  build_device_tree_overlay  i2c-bme280.dtbo  i2c-bmp280.dtbo  logger.py  pyproject.toml  setup_InfluxDB  setup_grafana  setup_logger_daemon  setup_logger_daemon.sh  setup_onewire.sh  setup_python  setup_python.sh  temp_logger.service
devtree/: i2c-bme280.dts  i2c-bmp280.dts
docker/: 00_dir_setup.sh  01_influxdb_config.sh  02_telegraf_config.sh  03_grafana_config.sh  tutorial
docker/compose-files/: .env  docker-compose.yml
docker/compose-files/influxdb/: .env  docker-compose.yml
docker/influxdb/: telegraf.conf
docker/influxdb/init/: create-telegraf.iql
docker/telegraf/: telegraf.conf
logger/: temp_logger.service
scrips/: sensor_logger.service  setup_logger_daemon.sh
sensor_logger/: data_uploader.py  i2c_sensors.py  iio_sensor.py  sensor.py  sensor_logger.py
sensor_logger/adapters/: __init__.py  adapter.py  hassAdapter.py  influxAdapter.py
src/: adapters.py  data_uploader.py  i2c_sensors.py  iio_sensor.py  sensor.py
